# threejs-dungeon

./: dungeon_tunnels_prototype.html
native/: CMakeLists.txt  README.md  vcpkg.json
native/include/app/: App.h
native/include/cave/: CaveGenerator.h
native/include/render/: Renderer.h
native/shaders/: fs_imgui.sc  fs_shadow.sc  fs_voxel.sc  varying.def.sc  vs_imgui.sc  vs_shadow.sc  vs_voxel.sc
native/src/: main.cpp
native/src/app/: App.cpp
native/src/cave/: CaveGenerator.cpp
native/src/render/: Renderer.cpp
src/: main.js  styles.css
src/core/: dungeon.js  engine-data.js  storage.js  voxel-dungeon.js
src/play/: play3d.js
src/render/: canvas-shapes.js
src/tools/: voxelizer.js
